--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Rock, Paper, Scissors!</h1>
     <div class="buttons">
         <button>Rock</button>
         <button>Paper</button>
